# proportional-ec

./: LICENSE  README.md  college_differences.py  draw.py  ec.py  main.py  pyproject.toml
data/electoral_college/: electoral_college.csv  source.md
data/state_votes/: 1976-2020-president.csv  source.md
data/topo_data/: tiles1976.topo.json  tiles1988.topo.json  tiles1992.topo.json  tiles2008.topo.json  tiles2020.topo.json
src/proportional_ec/: __init__.py  constants.py  data.py  draw.py  ec_data.py  election.py  election_method.py  proportional_ec.py  summarise.py  typing.py
